# deep-pianist-identification

./: .gitignore  README.md  modelcard.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: tests.yml
app/: index.html
config/: debug_local.yaml  default.yaml
config/baselines-randsplit/: resnet50-jtd+pijama-augment-randsplit0.yaml  resnet50-jtd+pijama-augment-randsplit1.yaml  resnet50-jtd+pijama-augment-randsplit10.yaml  resnet50-jtd+pijama-augment-randsplit11.yaml  resnet50-jtd+pijama-augment-randsplit12.yaml  resnet50-jtd+pijama-augment-randsplit13.yaml  resnet50-jtd+pijama-augment-randsplit14.yaml  resnet50-jtd+pijama-augment-randsplit15.yaml  resnet50-jtd+pijama-augment-randsplit16.yaml  resnet50-jtd+pijama-augment-randsplit17.yaml  resnet50-jtd+pijama-augment-randsplit18.yaml  resnet50-jtd+pijama-augment-randsplit19.yaml  (+8 more)
deep_pianist_identification/: __init__.py  data_augmentation.py  dataloader.py  extractors.py  plotting.py  training.py  utils.py  validation.py
notebooks/: 0.1-cheston-pijama-jtd-comparison.ipynb  0.2-cheston-analyse-stratified-results.ipynb  0.2-cheston-create-stratified-splits.ipynb  0.2-cheston-melody-extraction-eval.ipynb
references/: canonical_track_names.csv  example_polyphony.mid  example_polyphony_skylined.mid  jazz_contrafacts.csv
tests/: test_augmentation.py  test_baselines.py  test_blackbox.py  test_cav.py  test_data_splits.py  test_dataloader.py  test_disentangle.py  test_extractors.py  test_m21_utils.py  test_rf_baselines.py  test_shared.py  test_training.py  test_whitebox.py
tests/resources/: clip_000.mid  (+2 more)
(+309 files in other folders)
