[tool.poetry]
name = "deep-pianist-identification"
version = "0.1.0"
description = ""
authors = ["Huw Cheston <h.cheston@qmul.ac.uk>"]
packages = [{ include = "deep_pianist_identification" }]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python=">=3.10.12"
pandas="*"
numpy="<2.0.0"
scikit-learn="*"
scipy="==1.14.0"
matplotlib="*"
seaborn="*"
jupyter="*"
joblib="*"
loguru="*"
pyyaml="*"
tqdm="*"
pretty-midi="*"
numba="*"
torch="*"
torchaudio="*"
torchvision="*"
torchmetrics="*"
mlflow="*"
tenacity="*"
lime="*"
tensorly="*"
plotly="*"
scikit-image="*"
music21="*"
captum="*"
statsmodels="*"
cmcrameri="*"
partitura="*"
pillow="*"
beautifulsoup4="*"
coverage="*"
adjustText="*"